--- a/app/config/security_dev.yml
+++ b/app/config/security_dev.yml
@@ -1,10 +1,17 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
-            memory: ~
+            memory:
+              users:
+                admin:
+                    password: admin.dev
+                    roles: 'ROLE_USER'
+    encoders:
+      Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,7 +21,6 @@ security:
 
         main:
             anonymous: ~
-            http_basic: ~
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
@@ -22,6 +28,3 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
-
-    access_control:
-      - { path: ^/admin, roles: 'ROLE_USER' }
