--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,6 +22,9 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+            logout:
+              path:   /logout
+              target: /
 
     access_control:
       - { path: ^/admin, roles: 'ROLE_USER' }
