--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -43,6 +43,8 @@ twig:
       decimals: 2
       decimal_point: ','
       thousands_separator: ' '
+    form_themes:
+      - bootstrap_3_layout.html.twig
 
 # Doctrine Configuration
 doctrine:
@@ -54,6 +56,7 @@ doctrine:
         user: '%database_user%'
         password: '%database_password%'
         charset: UTF8
+        server_version: 5.6
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: '%kernel.root_dir%/../var/data/data.sqlite'
